--- a/src/app/offerts-board/components/prices/prices.component.scss
+++ b/src/app/offerts-board/components/prices/prices.component.scss
@@ -3,3 +3,10 @@
   justify-content: space-between;
   width: 100%;
 }
+
+.mat-subheader {
+  position: sticky;
+  top: 0;
+  background-color: whitesmoke;
+  z-index: 2;
+}
